--- a/Computer_Vision.ipynb
+++ b/Computer_Vision.ipynb
@@ -1916,7 +1916,7 @@
       "metadata": {
         "id": "WTQWWgsB9sEG"
       },
-      "execution_count": null,
+      "execution_count": 27,
       "outputs": []
     },
     {
@@ -4887,7 +4887,7 @@
         },
         "outputId": "3bb677ea-20ef-478e-f999-9aa8001a245d"
       },
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
@@ -4902,6 +4902,27 @@
           "text": [
             "Train Loss: 0.31837 | Train accuracy:  0.89%\n"
           ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "100%|██████████| 2/2 [01:53<00:00, 56.83s/it]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Train Loss: 0.07677 | Train accuracy:  0.98%\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\n"
+          ]
         }
       ]
     },
@@ -4915,10 +4936,23 @@
         ")"
       ],
       "metadata": {
-        "id": "GQoFIe11PLZ9"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GQoFIe11PLZ9",
+        "outputId": "d120cfbc-6bcf-4c78-f6a8-3a79073f2b70"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "Train time on cpu: 113.675 seconds\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
