--- a/Computer_Vision.ipynb
+++ b/Computer_Vision.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "gpuType": "T4",
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMfpJhwyYjlySHsHQMoKCmM",
+      "authorship_tag": "ABX9TyPHkff1Mnb5WugXoJACS+H9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4499,7 +4499,7 @@
     {
       "cell_type": "code",
       "source": [
-        "class TinyVGG(nn.Module):\n",
+        "class MNISTModel(nn.Module):\n",
         "\n",
         "  def __init__(self, in_shape: int, hidden_units: int, out_shape):\n",
         "    super().__init__()\n",
@@ -4556,13 +4556,13 @@
       "source": [
         "torch.manual_seed(101)\n",
         "\n",
-        "tinyvgg_model = TinyVGG(\n",
+        "mnist_model = MNISTModel(\n",
         "    in_shape = 1,\n",
         "    hidden_units = 10,\n",
         "    out_shape = len(mnist_train.classes)\n",
         ").to(device)\n",
         "\n",
-        "tinyvgg_model"
+        "mnist_model"
       ],
       "metadata": {
         "colab": {
@@ -4607,7 +4607,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# tinyvgg_model.state_dict()"
+        "# mnist_model.state_dict()"
       ],
       "metadata": {
         "id": "-l2zTTlYvqSl"
@@ -4647,7 +4647,7 @@
       "source": [
         "# dummy forward pass\n",
         "\n",
-        "tinyvgg_model(x)"
+        "mnist_model(x)"
       ],
       "metadata": {
         "colab": {
@@ -4760,7 +4760,7 @@
         "cross_entropy = nn.CrossEntropyLoss()\n",
         "\n",
         "sgd_optim = torch.optim.SGD(\n",
-        "    params = tinyvgg_model.parameters(),\n",
+        "    params = mnist_model.parameters(),\n",
         "    lr = 0.1\n",
         ")\n",
         "\n",
@@ -4778,84 +4778,37 @@
     {
       "cell_type": "code",
       "source": [
-        "def train_step(model: torch.nn.Module,\n",
-        "          data_loader: torch.utils.data.DataLoader,\n",
-        "          loss_fn: torch.nn.Module,\n",
-        "          optimizer: torch.optim.Optimizer,\n",
-        "          accuracy_fn: torchmetrics.Metric,\n",
-        "          device: torch.device = device):\n",
-        "      \"\"\"Loop through train data to train your model\"\"\"\n",
+        "# Training Loop\n",
         "\n",
-        "      train_loss, train_acc = 0,0\n",
-        "      model.to(device)\n",
-        "\n",
-        "      for batch, (X,y) in enumerate(data_loader):\n",
-        "\n",
-        "          X, y = X.to(device), y.to(device)\n",
-        "\n",
-        "          train_preds = model(X)\n",
-        "\n",
-        "          curr_loss = loss_fn(train_preds, y)\n",
-        "          train_loss += curr_loss\n",
-        "          train_acc += accuracy_fn(preds = train_preds,\n",
-        "                                   target = y)\n",
-        "\n",
-        "          optimizer.zero_grad()\n",
-        "\n",
-        "          curr_loss.backward()\n",
-        "\n",
-        "          optimizer.step()\n",
-        "\n",
-        "      # Average loss and accuracy\n",
-        "\n",
-        "      train_loss /= len(data_loader)\n",
-        "      train_acc /= len(data_loader)\n",
-        "\n",
-        "      print(f\"Train Loss: {train_loss:.5f} | Train accuracy:  {train_acc:.2f}%\")"
+        "EPOCHS = 5\n",
+        "\n"
       ],
       "metadata": {
-        "id": "A8Mk_GRgPd1e"
+        "id": "KMkFOsraYW2M"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "def test_step(model: torch.nn.Module,\n",
-        "         data_loader: torch.utils.data.DataLoader,\n",
-        "         loss_fn: torch.nn.Module,\n",
-        "         accuracy_fn: torchmetrics.Metric,\n",
-        "         device: torch.device = device):\n",
-        "      \"\"\"Testing loop\"\"\"\n",
+        "def print_train_time(start: float, end:float, device: torch.device= None):\n",
+        "    \"\"\"Prints difference between start and end time.\n",
         "\n",
-        "      test_loss, test_acc = 0, 0\n",
-        "      model.to(device)\n",
-        "      model.eval()\n",
+        "    Args:\n",
+        "        start (float): start time of computation.\n",
+        "        end (float): end time of computation.\n",
+        "        device ([type], optional): device in which the computation is running on (None is the default).\n",
+        "    \"\"\"\n",
         "\n",
-        "      with torch.inference_mode():\n",
-        "\n",
-        "          for X, y in data_loader:\n",
-        "\n",
-        "              X, y = X.to(device), y.to(device)\n",
-        "\n",
-        "              test_preds = model(X)\n",
-        "\n",
-        "              test_loss += loss_fn(test_preds, y)\n",
-        "\n",
-        "              test_acc += accuracy_fn(preds = test_preds,\n",
-        "                                      target = y)\n",
-        "\n",
-        "          # Average loss and accuracy per batch\n",
-        "          test_loss /= len(data_loader)\n",
-        "          test_acc /= len(data_loader)\n",
-        "\n",
-        "          print(f\"Test Loss: {test_loss:.5f} | Test Accuracy: {test_acc:.2f}%\")"
+        "    total_time= end - start\n",
+        "    print(f\"\\nTrain time on {device}: {total_time:.3f} seconds\")\n",
+        "    return total_time"
       ],
       "metadata": {
-        "id": "vP_JwS7HPd1e"
+        "id": "RMljP-MQXE3g"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4953,6 +4906,22 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "vLnt0pLxXH9M"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "hkGd2P_kQTu-"
+      }
     },
     {
       "cell_type": "markdown",
