--- a/Computer_Vision.ipynb
+++ b/Computer_Vision.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "gpuType": "T4",
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPHkff1Mnb5WugXoJACS+H9",
+      "authorship_tag": "ABX9TyM+DO7GyQbAIx855b9rbK3o",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1916,7 +1916,7 @@
       "metadata": {
         "id": "WTQWWgsB9sEG"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4028,7 +4028,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7lmqTB7wDiOU",
-        "outputId": "614e96cf-6908-4cb8-9342-a8994fdd61a3"
+        "outputId": "03885c30-658a-4033-afb7-abb86e96fa2f"
       },
       "execution_count": 1,
       "outputs": [
@@ -4036,7 +4036,26 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "/bin/bash: line 1: nvidia-smi: command not found\n"
+            "Thu Mar 13 14:36:51 2025       \n",
+            "+-----------------------------------------------------------------------------------------+\n",
+            "| NVIDIA-SMI 550.54.15              Driver Version: 550.54.15      CUDA Version: 12.4     |\n",
+            "|-----------------------------------------+------------------------+----------------------+\n",
+            "| GPU  Name                 Persistence-M | Bus-Id          Disp.A | Volatile Uncorr. ECC |\n",
+            "| Fan  Temp   Perf          Pwr:Usage/Cap |           Memory-Usage | GPU-Util  Compute M. |\n",
+            "|                                         |                        |               MIG M. |\n",
+            "|=========================================+========================+======================|\n",
+            "|   0  Tesla T4                       Off |   00000000:00:04.0 Off |                    0 |\n",
+            "| N/A   46C    P8             12W /   70W |       0MiB /  15360MiB |      0%      Default |\n",
+            "|                                         |                        |                  N/A |\n",
+            "+-----------------------------------------+------------------------+----------------------+\n",
+            "                                                                                         \n",
+            "+-----------------------------------------------------------------------------------------+\n",
+            "| Processes:                                                                              |\n",
+            "|  GPU   GI   CI        PID   Type   Process name                              GPU Memory |\n",
+            "|        ID   ID                                                               Usage      |\n",
+            "|=========================================================================================|\n",
+            "|  No running processes found                                                             |\n",
+            "+-----------------------------------------------------------------------------------------+\n"
           ]
         }
       ]
@@ -4050,7 +4069,7 @@
       ],
       "metadata": {
         "id": "J23A9i559Nf6",
-        "outputId": "d77ea2ce-defa-4871-b116-51146db8c43b",
+        "outputId": "1b86fa44-2ae0-4949-d9bf-166d39145ed4",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -4155,7 +4174,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "269b8283-d7f5-40ac-bf34-3d205d4c903a"
+        "outputId": "133979d1-001b-401c-8e13-73cd10f55bd9"
       },
       "execution_count": 5,
       "outputs": [
@@ -4175,7 +4194,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 9.91M/9.91M [00:00<00:00, 42.9MB/s]\n"
+            "100%|██████████| 9.91M/9.91M [00:01<00:00, 5.06MB/s]\n"
           ]
         },
         {
@@ -4196,7 +4215,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 28.9k/28.9k [00:00<00:00, 1.17MB/s]\n"
+            "100%|██████████| 28.9k/28.9k [00:00<00:00, 134kB/s]\n"
           ]
         },
         {
@@ -4217,7 +4236,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 1.65M/1.65M [00:00<00:00, 9.43MB/s]\n"
+            "100%|██████████| 1.65M/1.65M [00:01<00:00, 1.27MB/s]\n"
           ]
         },
         {
@@ -4238,7 +4257,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 4.54k/4.54k [00:00<00:00, 6.23MB/s]"
+            "100%|██████████| 4.54k/4.54k [00:00<00:00, 6.42MB/s]"
           ]
         },
         {
@@ -4265,7 +4284,7 @@
       ],
       "metadata": {
         "id": "qDOW03q-M4kA",
-        "outputId": "994d7251-ecc3-4edc-b9c7-eaac5bd76fcc",
+        "outputId": "4b643769-065b-4c3d-bb05-370880d03383",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -4302,7 +4321,7 @@
       ],
       "metadata": {
         "id": "muF_skRrB0l4",
-        "outputId": "2690e50e-6894-4143-c82e-7031dce69842",
+        "outputId": "c119bcad-3fb0-4700-bcf7-a2c6be2062cb",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -4346,7 +4365,7 @@
       ],
       "metadata": {
         "id": "3nr1piYe9sK8",
-        "outputId": "5992aa5c-9741-4e94-9290-d06054c9abd3",
+        "outputId": "190bbe98-b7fe-4678-af6b-c1014c520e7b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -4387,7 +4406,7 @@
       ],
       "metadata": {
         "id": "adQ0bDl8-Vq0",
-        "outputId": "026a58f2-67fa-400b-9d59-8b9038497760",
+        "outputId": "52e0cb22-c0d3-4c66-9772-868a4f54bb79",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 470
@@ -4437,7 +4456,7 @@
       ],
       "metadata": {
         "id": "4Y9DEbX-ApkA",
-        "outputId": "1beaf110-a606-4182-bbb3-af35e124282e",
+        "outputId": "1434c76b-5b6c-4489-a721-99e696de8404",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 364
@@ -4569,7 +4588,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "32j9kVj0E_fJ",
-        "outputId": "80511b4d-fa49-4a91-b63a-5a41d6d300ce"
+        "outputId": "45e564c3-157a-4823-ff40-2426d508b9d5"
       },
       "execution_count": 14,
       "outputs": [
@@ -4577,7 +4596,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "TinyVGG(\n",
+              "MNISTModel(\n",
               "  (block1): Sequential(\n",
               "    (0): Conv2d(1, 10, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
               "    (1): ReLU()\n",
@@ -4626,7 +4645,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_Ys8QFSfHVzK",
-        "outputId": "7b364072-ebf5-4490-e4ca-a871a0896534"
+        "outputId": "e4b4df5a-7c98-4d3a-a339-8bdb1af5e0d2"
       },
       "execution_count": 16,
       "outputs": [
@@ -4654,7 +4673,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZujlMZ1vH2rV",
-        "outputId": "24fba640-1df8-4d1b-e7f4-f8e1130bf83e"
+        "outputId": "4b5cb448-8d84-4ec3-c53f-d554e1dcc108"
       },
       "execution_count": 17,
       "outputs": [
@@ -4663,7 +4682,7 @@
           "data": {
             "text/plain": [
               "tensor([[-0.0494,  0.0394,  0.0062,  0.0080, -0.0450,  0.0306, -0.0474, -0.0579,\n",
-              "          0.0176, -0.0361]], grad_fn=<AddmmBackward0>)"
+              "          0.0176, -0.0361]], device='cuda:0', grad_fn=<AddmmBackward0>)"
             ]
           },
           "metadata": {},
@@ -4684,7 +4703,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lqCx_J6zPrKa",
-        "outputId": "0257b59f-dd62-488d-ce61-56056ae63e96"
+        "outputId": "1862bd42-312f-4f5b-de07-9a807c7ac11f"
       },
       "execution_count": 18,
       "outputs": [
@@ -4714,7 +4733,7 @@
       ],
       "metadata": {
         "id": "1-crvDdu6kOM",
-        "outputId": "3936b25b-3440-406a-b45b-e62f06941c49",
+        "outputId": "ad65dfe8-822f-429b-f800-43c703ac751c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -4725,17 +4744,17 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m931.6/931.6 kB\u001b[0m \u001b[31m16.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m363.4/363.4 MB\u001b[0m \u001b[31m4.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m13.8/13.8 MB\u001b[0m \u001b[31m48.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m24.6/24.6 MB\u001b[0m \u001b[31m14.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m883.7/883.7 kB\u001b[0m \u001b[31m36.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m664.8/664.8 MB\u001b[0m \u001b[31m2.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m211.5/211.5 MB\u001b[0m \u001b[31m6.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m56.3/56.3 MB\u001b[0m \u001b[31m10.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m127.9/127.9 MB\u001b[0m \u001b[31m7.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m207.5/207.5 MB\u001b[0m \u001b[31m6.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m21.1/21.1 MB\u001b[0m \u001b[31m75.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m931.6/931.6 kB\u001b[0m \u001b[31m50.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m363.4/363.4 MB\u001b[0m \u001b[31m4.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m13.8/13.8 MB\u001b[0m \u001b[31m115.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m24.6/24.6 MB\u001b[0m \u001b[31m88.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m883.7/883.7 kB\u001b[0m \u001b[31m54.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m664.8/664.8 MB\u001b[0m \u001b[31m2.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m211.5/211.5 MB\u001b[0m \u001b[31m6.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m56.3/56.3 MB\u001b[0m \u001b[31m13.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m127.9/127.9 MB\u001b[0m \u001b[31m8.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m207.5/207.5 MB\u001b[0m \u001b[31m6.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m21.1/21.1 MB\u001b[0m \u001b[31m94.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25h"
           ]
         }
@@ -4778,9 +4797,41 @@
     {
       "cell_type": "code",
       "source": [
+        "enumerate(mnist_train_dataloader)"
+      ],
+      "metadata": {
+        "id": "Wlr0S4Qn8_ef",
+        "outputId": "60fd1b93-e48a-48c4-d56c-2c7f9a80fdf2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<enumerate at 0x7c61ac738ea0>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 24
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# Training Loop\n",
         "\n",
         "EPOCHS = 5\n",
+        "\n",
+        "for epoch in tqdm(range(EPOCHS)):\n",
+        "\n",
+        "  train_loss = 0\n",
+        "\n",
+        "  for batch, (X,y) in enumerate(mnist_train_dataloader):\n",
         "\n"
       ],
       "metadata": {
@@ -4840,7 +4891,7 @@
         },
         "outputId": "3bb677ea-20ef-478e-f999-9aa8001a245d"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4895,7 +4946,7 @@
         "id": "GQoFIe11PLZ9",
         "outputId": "d120cfbc-6bcf-4c78-f6a8-3a79073f2b70"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
