--- a/Computer_Vision.ipynb
+++ b/Computer_Vision.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "gpuType": "T4",
       "toc_visible": true,
-      "authorship_tag": "ABX9TyM+DO7GyQbAIx855b9rbK3o",
+      "authorship_tag": "ABX9TyPuVfmUPMSt+NWeIUrSlwTx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4800,11 +4800,11 @@
         "enumerate(mnist_train_dataloader)"
       ],
       "metadata": {
-        "id": "Wlr0S4Qn8_ef",
-        "outputId": "60fd1b93-e48a-48c4-d56c-2c7f9a80fdf2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Wlr0S4Qn8_ef",
+        "outputId": "60fd1b93-e48a-48c4-d56c-2c7f9a80fdf2"
       },
       "execution_count": 24,
       "outputs": [
@@ -4829,10 +4829,22 @@
         "\n",
         "for epoch in tqdm(range(EPOCHS)):\n",
         "\n",
-        "  train_loss = 0\n",
+        "  total_loss = 0\n",
         "\n",
         "  for batch, (X,y) in enumerate(mnist_train_dataloader):\n",
-        "\n"
+        "\n",
+        "    mnist_model.train()\n",
+        "\n",
+        "    X, y = X.to(device), y.to(device)\n",
+        "\n",
+        "    # Forward pass\n",
+        "    y_pred = mnist_model(X)\n",
+        "\n",
+        "    # Loss calculation\n",
+        "    loss = cross_entropy(y_pred, y)\n",
+        "    total_loss += loss\n",
+        "\n",
+        ""
       ],
       "metadata": {
         "id": "KMkFOsraYW2M"
