--- a/Computer_Vision.ipynb
+++ b/Computer_Vision.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "gpuType": "T4",
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPuVfmUPMSt+NWeIUrSlwTx",
+      "authorship_tag": "ABX9TyMBMiY3jaI4Azqx6k/eCsYh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4829,7 +4829,7 @@
         "\n",
         "for epoch in tqdm(range(EPOCHS)):\n",
         "\n",
-        "  total_loss = 0\n",
+        "  train_loss = 0\n",
         "\n",
         "  for batch, (X,y) in enumerate(mnist_train_dataloader):\n",
         "\n",
@@ -4842,8 +4842,19 @@
         "\n",
         "    # Loss calculation\n",
         "    loss = cross_entropy(y_pred, y)\n",
-        "    total_loss += loss\n",
+        "    train_loss += loss\n",
         "\n",
+        "    # Zeroing the gradient\n",
+        "    sgd_optim.zero_grad()\n",
+        "\n",
+        "    # Backpropagation\n",
+        "    loss.backward()\n",
+        "\n",
+        "    # Optimizer step\n",
+        "    sgd_optim.step()\n",
+        "\n",
+        "  # Normalizing train loss with number of batches\n",
+        "  train_loss /= len(mnist_train_dataloader)\n",
         ""
       ],
       "metadata": {
