--- a/Computer_Vision.ipynb
+++ b/Computer_Vision.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "gpuType": "T4",
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMBMiY3jaI4Azqx6k/eCsYh",
+      "authorship_tag": "ABX9TyNfY6xzYJP4cGfbDS5YSCM3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4823,11 +4823,11 @@
     {
       "cell_type": "code",
       "source": [
-        "# Training Loop\n",
-        "\n",
         "EPOCHS = 5\n",
         "\n",
         "for epoch in tqdm(range(EPOCHS)):\n",
+        "\n",
+        "  ### Training Loop ###\n",
         "\n",
         "  train_loss = 0\n",
         "\n",
@@ -4838,10 +4838,10 @@
         "    X, y = X.to(device), y.to(device)\n",
         "\n",
         "    # Forward pass\n",
-        "    y_pred = mnist_model(X)\n",
+        "    train_pred = mnist_model(X)\n",
         "\n",
         "    # Loss calculation\n",
-        "    loss = cross_entropy(y_pred, y)\n",
+        "    loss = cross_entropy(train_pred, y)\n",
         "    train_loss += loss\n",
         "\n",
         "    # Zeroing the gradient\n",
@@ -4855,6 +4855,18 @@
         "\n",
         "  # Normalizing train loss with number of batches\n",
         "  train_loss /= len(mnist_train_dataloader)\n",
+        "\n",
+        "\n",
+        "  ### Testing Loop ###\n",
+        "\n",
+        "  mnist_model.eval()\n",
+        "\n",
+        "  test_loss = 0\n",
+        "\n",
+        "  with torch.inference_mode():\n",
+        "\n",
+        "    for batch, (X,y) in enumerate(mnist_test_dataloader):\n",
+        "\n",
         ""
       ],
       "metadata": {
