--- a/Computer_Vision.ipynb
+++ b/Computer_Vision.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "gpuType": "T4",
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNfY6xzYJP4cGfbDS5YSCM3",
+      "authorship_tag": "ABX9TyN1oHIs9ugIVXavkZj/8gwJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4781,12 +4781,7 @@
         "sgd_optim = torch.optim.SGD(\n",
         "    params = mnist_model.parameters(),\n",
         "    lr = 0.1\n",
-        ")\n",
-        "\n",
-        "acc_fn = torchmetrics.Accuracy(\n",
-        "  task = \"multiclass\",\n",
-        "  num_classes = len(mnist_train.classes)\n",
-        ").to(device)"
+        ")"
       ],
       "metadata": {
         "id": "X7yhVmFKXmZn"
@@ -4853,7 +4848,7 @@
         "    # Optimizer step\n",
         "    sgd_optim.step()\n",
         "\n",
-        "  # Normalizing train loss with number of batches\n",
+        "  # Normalizing train loss with the number of batches\n",
         "  train_loss /= len(mnist_train_dataloader)\n",
         "\n",
         "\n",
@@ -4867,7 +4862,19 @@
         "\n",
         "    for batch, (X,y) in enumerate(mnist_test_dataloader):\n",
         "\n",
-        ""
+        "      X, y = X.to(device), y.to(device)\n",
+        "\n",
+        "      # Forward pass\n",
+        "      test_pred = mnist_model(X)\n",
+        "\n",
+        "      # Calculating Loss\n",
+        "      loss = cross_entropy(test_pred, y)\n",
+        "      test_loss += loss\n",
+        "\n",
+        "    # Normalizing test loss to the number of batches\n",
+        "    test_loss /= len(mnist_test_dataloader)\n",
+        "\n",
+        "  print(f\"Epoch: {epoch} | Train Loss: {train_loss:.3f} | Test Loss: {test_loss:.3f}\")"
       ],
       "metadata": {
         "id": "KMkFOsraYW2M"
