--- a/Computer_Vision.ipynb
+++ b/Computer_Vision.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "gpuType": "T4",
       "toc_visible": true,
-      "authorship_tag": "ABX9TyN1oHIs9ugIVXavkZj/8gwJ",
+      "authorship_tag": "ABX9TyMC8wWuMteeUVXlEbS7eDVd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4028,7 +4028,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7lmqTB7wDiOU",
-        "outputId": "03885c30-658a-4033-afb7-abb86e96fa2f"
+        "outputId": "9ad9a43d-45c9-4cf3-9671-3e8c5126a9d5"
       },
       "execution_count": 1,
       "outputs": [
@@ -4036,26 +4036,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Thu Mar 13 14:36:51 2025       \n",
-            "+-----------------------------------------------------------------------------------------+\n",
-            "| NVIDIA-SMI 550.54.15              Driver Version: 550.54.15      CUDA Version: 12.4     |\n",
-            "|-----------------------------------------+------------------------+----------------------+\n",
-            "| GPU  Name                 Persistence-M | Bus-Id          Disp.A | Volatile Uncorr. ECC |\n",
-            "| Fan  Temp   Perf          Pwr:Usage/Cap |           Memory-Usage | GPU-Util  Compute M. |\n",
-            "|                                         |                        |               MIG M. |\n",
-            "|=========================================+========================+======================|\n",
-            "|   0  Tesla T4                       Off |   00000000:00:04.0 Off |                    0 |\n",
-            "| N/A   46C    P8             12W /   70W |       0MiB /  15360MiB |      0%      Default |\n",
-            "|                                         |                        |                  N/A |\n",
-            "+-----------------------------------------+------------------------+----------------------+\n",
-            "                                                                                         \n",
-            "+-----------------------------------------------------------------------------------------+\n",
-            "| Processes:                                                                              |\n",
-            "|  GPU   GI   CI        PID   Type   Process name                              GPU Memory |\n",
-            "|        ID   ID                                                               Usage      |\n",
-            "|=========================================================================================|\n",
-            "|  No running processes found                                                             |\n",
-            "+-----------------------------------------------------------------------------------------+\n"
+            "/bin/bash: line 1: nvidia-smi: command not found\n"
           ]
         }
       ]
@@ -4069,7 +4050,7 @@
       ],
       "metadata": {
         "id": "J23A9i559Nf6",
-        "outputId": "1b86fa44-2ae0-4949-d9bf-166d39145ed4",
+        "outputId": "9c9a23eb-b10c-441b-cc20-a89826d3bd90",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -4174,7 +4155,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "133979d1-001b-401c-8e13-73cd10f55bd9"
+        "outputId": "997b13e9-bfc9-4cad-a2bb-fd8513d283ed"
       },
       "execution_count": 5,
       "outputs": [
@@ -4194,7 +4175,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 9.91M/9.91M [00:01<00:00, 5.06MB/s]\n"
+            "100%|██████████| 9.91M/9.91M [00:00<00:00, 57.8MB/s]\n"
           ]
         },
         {
@@ -4215,7 +4196,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 28.9k/28.9k [00:00<00:00, 134kB/s]\n"
+            "100%|██████████| 28.9k/28.9k [00:00<00:00, 1.80MB/s]\n"
           ]
         },
         {
@@ -4236,7 +4217,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 1.65M/1.65M [00:01<00:00, 1.27MB/s]\n"
+            "100%|██████████| 1.65M/1.65M [00:00<00:00, 14.4MB/s]\n"
           ]
         },
         {
@@ -4257,7 +4238,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 4.54k/4.54k [00:00<00:00, 6.42MB/s]"
+            "100%|██████████| 4.54k/4.54k [00:00<00:00, 4.68MB/s]\n"
           ]
         },
         {
@@ -4265,13 +4246,6 @@
           "name": "stdout",
           "text": [
             "Extracting data/MNIST/raw/t10k-labels-idx1-ubyte.gz to data/MNIST/raw\n",
-            "\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
             "\n"
           ]
         }
@@ -4284,7 +4258,7 @@
       ],
       "metadata": {
         "id": "qDOW03q-M4kA",
-        "outputId": "4b643769-065b-4c3d-bb05-370880d03383",
+        "outputId": "a6c47974-b6d0-4d07-c036-f9307caf2b05",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -4321,7 +4295,7 @@
       ],
       "metadata": {
         "id": "muF_skRrB0l4",
-        "outputId": "c119bcad-3fb0-4700-bcf7-a2c6be2062cb",
+        "outputId": "e9780999-ffa0-4e3d-f69a-870a4f10e83b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -4365,7 +4339,7 @@
       ],
       "metadata": {
         "id": "3nr1piYe9sK8",
-        "outputId": "190bbe98-b7fe-4678-af6b-c1014c520e7b",
+        "outputId": "59fb8848-6a52-4aad-f087-51b9c6f24afe",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -4406,7 +4380,7 @@
       ],
       "metadata": {
         "id": "adQ0bDl8-Vq0",
-        "outputId": "52e0cb22-c0d3-4c66-9772-868a4f54bb79",
+        "outputId": "be4728bb-2ab9-468d-9b8f-aa7e95303db1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 470
@@ -4456,7 +4430,7 @@
       ],
       "metadata": {
         "id": "4Y9DEbX-ApkA",
-        "outputId": "1434c76b-5b6c-4489-a721-99e696de8404",
+        "outputId": "a4b4f80e-07b6-43fc-b947-9accee128395",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 364
@@ -4588,7 +4562,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "32j9kVj0E_fJ",
-        "outputId": "45e564c3-157a-4823-ff40-2426d508b9d5"
+        "outputId": "d188cf20-0a73-4e22-d781-7e88db35921b"
       },
       "execution_count": 14,
       "outputs": [
@@ -4645,7 +4619,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_Ys8QFSfHVzK",
-        "outputId": "e4b4df5a-7c98-4d3a-a339-8bdb1af5e0d2"
+        "outputId": "d0b1c1fb-7c34-4332-9212-172a895aba45"
       },
       "execution_count": 16,
       "outputs": [
@@ -4673,7 +4647,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZujlMZ1vH2rV",
-        "outputId": "4b5cb448-8d84-4ec3-c53f-d554e1dcc108"
+        "outputId": "6feea168-5601-4e0e-afbf-b84ef9adfdc0"
       },
       "execution_count": 17,
       "outputs": [
@@ -4682,7 +4656,7 @@
           "data": {
             "text/plain": [
               "tensor([[-0.0494,  0.0394,  0.0062,  0.0080, -0.0450,  0.0306, -0.0474, -0.0579,\n",
-              "          0.0176, -0.0361]], device='cuda:0', grad_fn=<AddmmBackward0>)"
+              "          0.0176, -0.0361]], grad_fn=<AddmmBackward0>)"
             ]
           },
           "metadata": {},
@@ -4703,7 +4677,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lqCx_J6zPrKa",
-        "outputId": "1862bd42-312f-4f5b-de07-9a807c7ac11f"
+        "outputId": "25e712d0-819b-4dc9-e320-7b55f6c317c3"
       },
       "execution_count": 18,
       "outputs": [
@@ -4733,7 +4707,7 @@
       ],
       "metadata": {
         "id": "1-crvDdu6kOM",
-        "outputId": "ad65dfe8-822f-429b-f800-43c703ac751c",
+        "outputId": "585b61ae-ca44-4e00-8e16-6f18ddc2a1c5",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -4744,17 +4718,17 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m931.6/931.6 kB\u001b[0m \u001b[31m50.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m363.4/363.4 MB\u001b[0m \u001b[31m4.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m13.8/13.8 MB\u001b[0m \u001b[31m115.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m24.6/24.6 MB\u001b[0m \u001b[31m88.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m883.7/883.7 kB\u001b[0m \u001b[31m54.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m664.8/664.8 MB\u001b[0m \u001b[31m2.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m211.5/211.5 MB\u001b[0m \u001b[31m6.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m56.3/56.3 MB\u001b[0m \u001b[31m13.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m127.9/127.9 MB\u001b[0m \u001b[31m8.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m207.5/207.5 MB\u001b[0m \u001b[31m6.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m21.1/21.1 MB\u001b[0m \u001b[31m94.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m931.6/931.6 kB\u001b[0m \u001b[31m13.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m363.4/363.4 MB\u001b[0m \u001b[31m4.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m13.8/13.8 MB\u001b[0m \u001b[31m91.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m24.6/24.6 MB\u001b[0m \u001b[31m71.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m883.7/883.7 kB\u001b[0m \u001b[31m40.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m664.8/664.8 MB\u001b[0m \u001b[31m1.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m211.5/211.5 MB\u001b[0m \u001b[31m4.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m56.3/56.3 MB\u001b[0m \u001b[31m13.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m127.9/127.9 MB\u001b[0m \u001b[31m7.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m207.5/207.5 MB\u001b[0m \u001b[31m4.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m21.1/21.1 MB\u001b[0m \u001b[31m47.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25h"
           ]
         }
@@ -4763,7 +4737,6 @@
     {
       "cell_type": "code",
       "source": [
-        "from timeit import default_timer as timer\n",
         "from tqdm import tqdm\n",
         "import torchmetrics"
       ],
@@ -4799,25 +4772,27 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Wlr0S4Qn8_ef",
-        "outputId": "60fd1b93-e48a-48c4-d56c-2c7f9a80fdf2"
+        "outputId": "9481d941-6526-4f8d-aa23-baeb650cd16a"
       },
-      "execution_count": 24,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<enumerate at 0x7c61ac738ea0>"
+              "<enumerate at 0x7810fb529df0>"
             ]
           },
           "metadata": {},
-          "execution_count": 24
+          "execution_count": 22
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
+        "%%time\n",
+        "\n",
         "EPOCHS = 5\n",
         "\n",
         "for epoch in tqdm(range(EPOCHS)):\n",
@@ -4874,29 +4849,76 @@
         "    # Normalizing test loss to the number of batches\n",
         "    test_loss /= len(mnist_test_dataloader)\n",
         "\n",
-        "  print(f\"Epoch: {epoch} | Train Loss: {train_loss:.3f} | Test Loss: {test_loss:.3f}\")"
+        "  print(f\"\\nEpoch: {epoch} | Train Loss: {train_loss:.3f} | Test Loss: {test_loss:.3f}\")"
       ],
       "metadata": {
-        "id": "KMkFOsraYW2M"
+        "id": "KMkFOsraYW2M",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c9db2151-2e09-43ea-a77d-973e9eccaf63"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            " 20%|██        | 1/5 [01:07<04:30, 67.68s/it]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch: 0 | Train Loss: 0.342 | Test Loss: 0.075\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\r 40%|████      | 2/5 [02:17<03:25, 68.67s/it]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch: 1 | Train Loss: 0.074 | Test Loss: 0.050\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\r 60%|██████    | 3/5 [03:15<02:08, 64.18s/it]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch: 2 | Train Loss: 0.058 | Test Loss: 0.047\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
         "def print_train_time(start: float, end:float, device: torch.device= None):\n",
-        "    \"\"\"Prints difference between start and end time.\n",
+        "  \"\"\"Prints difference between start and end time.\n",
         "\n",
-        "    Args:\n",
-        "        start (float): start time of computation.\n",
-        "        end (float): end time of computation.\n",
-        "        device ([type], optional): device in which the computation is running on (None is the default).\n",
-        "    \"\"\"\n",
+        "  Args:\n",
+        "      start (float): start time of computation.\n",
+        "      end (float): end time of computation.\n",
+        "      device ([type], optional): device in which the computation is running on (None is the default).\n",
+        "  \"\"\"\n",
         "\n",
-        "    total_time= end - start\n",
-        "    print(f\"\\nTrain time on {device}: {total_time:.3f} seconds\")\n",
-        "    return total_time"
+        "  total_time= end - start\n",
+        "  print(f\"\\nTrain time on {device}: {total_time:.3f} seconds\")\n",
+        "  return total_time"
       ],
       "metadata": {
         "id": "RMljP-MQXE3g"
@@ -4927,50 +4949,10 @@
         "end_time = timer()"
       ],
       "metadata": {
-        "id": "p6EX825lqIPe",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "3bb677ea-20ef-478e-f999-9aa8001a245d"
+        "id": "p6EX825lqIPe"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            " 50%|█████     | 1/2 [00:55<00:55, 55.21s/it]"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Train Loss: 0.31837 | Train accuracy:  0.89%\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "100%|██████████| 2/2 [01:53<00:00, 56.83s/it]"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Train Loss: 0.07677 | Train accuracy:  0.98%\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -4982,23 +4964,10 @@
         ")"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "GQoFIe11PLZ9",
-        "outputId": "d120cfbc-6bcf-4c78-f6a8-3a79073f2b70"
+        "id": "GQoFIe11PLZ9"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\n",
-            "Train time on cpu: 113.675 seconds\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
