--- a/Computer_Vision.ipynb
+++ b/Computer_Vision.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "gpuType": "T4",
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPndjqDRQpIJMRbXCamyZOt",
+      "authorship_tag": "ABX9TyN/qq8Yj7sLfcz7HDQ2RfKA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4875,6 +4875,16 @@
         "                     data: list,\n",
         "                     device: torch.device = device):\n",
         "\n",
+        "  pred_probs = []\n",
+        "\n",
+        "  model.eval()\n",
+        "  with torch.inference_mode():\n",
+        "\n",
+        "    for sample in data:\n",
+        "\n",
+        "      sample = torch.unsqueeze(sample, dim=0).to(device, dtype=torch.float32)\n",
+        "\n",
+        "      # Forward pass: output = raw logits\n",
         ""
       ],
       "metadata": {
