--- a/Computer_Vision.ipynb
+++ b/Computer_Vision.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "gpuType": "T4",
       "toc_visible": true,
-      "authorship_tag": "ABX9TyN/qq8Yj7sLfcz7HDQ2RfKA",
+      "authorship_tag": "ABX9TyNy5+62JZjyeP2ZfyO1Mui9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4884,8 +4884,15 @@
         "\n",
         "      sample = torch.unsqueeze(sample, dim=0).to(device, dtype=torch.float32)\n",
         "\n",
-        "      # Forward pass: output = raw logits\n",
-        ""
+        "      # Forward pass: get raw logists\n",
+        "      pred_logits = model(sample)\n",
+        "\n",
+        "      # Get predictions\n",
+        "      pred_prob = torch.softmax(pred_logits.squeeze(), dim=0)\n",
+        "\n",
+        "      pred_probs.append(pred_prob)\n",
+        "\n",
+        "  return torch.stack(pred_probs) # Turn list into tensor"
       ],
       "metadata": {
         "id": "Luly_dpEPaAn"
