--- a/Computer_Vision.ipynb
+++ b/Computer_Vision.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "gpuType": "T4",
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNy5+62JZjyeP2ZfyO1Mui9",
+      "authorship_tag": "ABX9TyNTrsicgRiEl2fI8f1z0C8H",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3659,7 +3659,7 @@
         "test_samples = []\n",
         "test_labels = []\n",
         "\n",
-        "for sample, label in random.sample(list(test_data), k=18): # k: number of samples\n",
+        "for sample,label in random.sample(list(test_data), k=18): # k: number of samples\n",
         "    test_samples.append(sample)\n",
         "    test_labels.append(label)\n",
         "\n",
@@ -4902,9 +4902,28 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import random"
+      ],
       "metadata": {
         "id": "9BbogOXwQlhB"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "random.seed(101)\n",
+        "\n",
+        "test_samples = []\n",
+        "test_labels = []\n",
+        "\n",
+        "for sample,label in random.sample(list(mnist_test), k=5):\n",
+        ""
+      ],
+      "metadata": {
+        "id": "bluz6BTS39VS"
       },
       "execution_count": null,
       "outputs": []
