--- a/Computer_Vision.ipynb
+++ b/Computer_Vision.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "gpuType": "T4",
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNTrsicgRiEl2fI8f1z0C8H",
+      "authorship_tag": "ABX9TyPgYfnQ5TLbQGI5HDbnYUj3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4028,7 +4028,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7lmqTB7wDiOU",
-        "outputId": "4b7ac09f-3fe4-48d4-c78f-089b55f8b7b5"
+        "outputId": "ee285837-fa6e-4afd-b927-4e28a618affd"
       },
       "execution_count": 1,
       "outputs": [
@@ -4036,7 +4036,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Sat Mar 15 14:36:32 2025       \n",
+            "Sat Mar 15 19:04:01 2025       \n",
             "+-----------------------------------------------------------------------------------------+\n",
             "| NVIDIA-SMI 550.54.15              Driver Version: 550.54.15      CUDA Version: 12.4     |\n",
             "|-----------------------------------------+------------------------+----------------------+\n",
@@ -4045,7 +4045,7 @@
             "|                                         |                        |               MIG M. |\n",
             "|=========================================+========================+======================|\n",
             "|   0  Tesla T4                       Off |   00000000:00:04.0 Off |                    0 |\n",
-            "| N/A   59C    P8             11W /   70W |       0MiB /  15360MiB |      0%      Default |\n",
+            "| N/A   38C    P8              9W /   70W |       0MiB /  15360MiB |      0%      Default |\n",
             "|                                         |                        |                  N/A |\n",
             "+-----------------------------------------+------------------------+----------------------+\n",
             "                                                                                         \n",
@@ -4069,7 +4069,7 @@
       ],
       "metadata": {
         "id": "J23A9i559Nf6",
-        "outputId": "c16ffa84-dd8b-41a6-e281-1bedf9186ab1",
+        "outputId": "5881b389-1ba9-4be4-e4d9-893b57b6346c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -4174,7 +4174,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "fb789393-2acd-40ed-c679-a24fb26908f9"
+        "outputId": "4bfec666-a26a-483e-c679-c92da00fc80b"
       },
       "execution_count": 5,
       "outputs": [
@@ -4182,10 +4182,10 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 9.91M/9.91M [00:00<00:00, 16.6MB/s]\n",
-            "100%|██████████| 28.9k/28.9k [00:00<00:00, 493kB/s]\n",
-            "100%|██████████| 1.65M/1.65M [00:00<00:00, 4.50MB/s]\n",
-            "100%|██████████| 4.54k/4.54k [00:00<00:00, 1.93MB/s]\n"
+            "100%|██████████| 9.91M/9.91M [00:00<00:00, 16.5MB/s]\n",
+            "100%|██████████| 28.9k/28.9k [00:00<00:00, 492kB/s]\n",
+            "100%|██████████| 1.65M/1.65M [00:00<00:00, 4.57MB/s]\n",
+            "100%|██████████| 4.54k/4.54k [00:00<00:00, 9.08MB/s]\n"
           ]
         }
       ]
@@ -4197,7 +4197,7 @@
       ],
       "metadata": {
         "id": "qDOW03q-M4kA",
-        "outputId": "a8d80284-1bdc-42a7-8fff-bd556d714113",
+        "outputId": "54538a4c-52e4-4a14-a152-50328ebec6c9",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -4234,7 +4234,7 @@
       ],
       "metadata": {
         "id": "muF_skRrB0l4",
-        "outputId": "d13be498-3c66-4873-fcc1-84543580d9f3",
+        "outputId": "62f2e9a5-b54c-4fc7-9ba0-1ef17a53e67c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -4278,7 +4278,7 @@
       ],
       "metadata": {
         "id": "3nr1piYe9sK8",
-        "outputId": "cfef82a2-7c8b-4257-a92e-19c68e1ff3c6",
+        "outputId": "2cb7d105-16c7-4b97-8380-3a366e089f2e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -4319,7 +4319,7 @@
       ],
       "metadata": {
         "id": "adQ0bDl8-Vq0",
-        "outputId": "ce37e9ac-8e26-4d83-fd29-b3bb87ef5c23",
+        "outputId": "c1e2611a-cb6f-4084-f6d1-dc53e1cb6855",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 470
@@ -4369,7 +4369,7 @@
       ],
       "metadata": {
         "id": "4Y9DEbX-ApkA",
-        "outputId": "fdcb482e-a130-4380-fbbc-b64bd89ef363",
+        "outputId": "368e37d9-cf50-4258-d22b-e85fe0838397",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 364
@@ -4501,7 +4501,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "32j9kVj0E_fJ",
-        "outputId": "4bfa084b-4475-4f57-eb6c-8e7fa7a86e54"
+        "outputId": "714ec3a7-06b0-4590-993e-9a6378de7746"
       },
       "execution_count": 14,
       "outputs": [
@@ -4558,7 +4558,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_Ys8QFSfHVzK",
-        "outputId": "57eb0248-a217-4b76-9da5-39ec715f7b5c"
+        "outputId": "70c76170-bd5a-4c8d-a159-87d9944eb582"
       },
       "execution_count": 16,
       "outputs": [
@@ -4586,7 +4586,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZujlMZ1vH2rV",
-        "outputId": "1e7d33d3-6241-4f76-8d9c-e2a60a35643c"
+        "outputId": "7fde0a71-f9fc-4b5f-af93-f5d6639bfd8f"
       },
       "execution_count": 17,
       "outputs": [
@@ -4616,7 +4616,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lqCx_J6zPrKa",
-        "outputId": "6d3ae589-f6dc-4c1f-e8a1-9cf1f2415eba"
+        "outputId": "ad16f16d-9944-4422-ba74-48370f7f056e"
       },
       "execution_count": 18,
       "outputs": [
@@ -4646,7 +4646,7 @@
       ],
       "metadata": {
         "id": "1-crvDdu6kOM",
-        "outputId": "4506171c-895d-4286-8e95-4dfc2b44d160",
+        "outputId": "8898ff26-1564-4a78-f04c-3770c5ec1fae",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -4657,17 +4657,17 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m931.7/931.7 kB\u001b[0m \u001b[31m20.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m363.4/363.4 MB\u001b[0m \u001b[31m3.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m13.8/13.8 MB\u001b[0m \u001b[31m45.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m24.6/24.6 MB\u001b[0m \u001b[31m15.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m883.7/883.7 kB\u001b[0m \u001b[31m37.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m664.8/664.8 MB\u001b[0m \u001b[31m2.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m211.5/211.5 MB\u001b[0m \u001b[31m5.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m56.3/56.3 MB\u001b[0m \u001b[31m17.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m127.9/127.9 MB\u001b[0m \u001b[31m8.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m207.5/207.5 MB\u001b[0m \u001b[31m6.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m21.1/21.1 MB\u001b[0m \u001b[31m79.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m931.7/931.7 kB\u001b[0m \u001b[31m21.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m363.4/363.4 MB\u001b[0m \u001b[31m4.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m13.8/13.8 MB\u001b[0m \u001b[31m113.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m24.6/24.6 MB\u001b[0m \u001b[31m87.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m883.7/883.7 kB\u001b[0m \u001b[31m51.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m664.8/664.8 MB\u001b[0m \u001b[31m845.3 kB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m211.5/211.5 MB\u001b[0m \u001b[31m6.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m56.3/56.3 MB\u001b[0m \u001b[31m15.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m127.9/127.9 MB\u001b[0m \u001b[31m7.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m207.5/207.5 MB\u001b[0m \u001b[31m1.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m21.1/21.1 MB\u001b[0m \u001b[31m63.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25h"
           ]
         }
@@ -4769,15 +4769,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "19a2e5cf-e073-4b42-edcd-15d7bb0c65b8"
+        "outputId": "735b4d47-49c2-48f7-d042-a8f69c639951"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            " 20%|██        | 1/5 [00:19<01:18, 19.54s/it]"
+            " 10%|█         | 1/10 [00:18<02:46, 18.48s/it]"
           ]
         },
         {
@@ -4785,14 +4785,14 @@
           "name": "stdout",
           "text": [
             "\n",
-            "Epoch: 0 | Train Loss: 0.338 | Test Loss: 0.061\n"
+            "Epoch: 0 | Train Loss: 0.323 | Test Loss: 0.069\n"
           ]
         },
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "\r 40%|████      | 2/5 [00:31<00:45, 15.02s/it]"
+            "\r 20%|██        | 2/10 [00:28<01:49, 13.67s/it]"
           ]
         },
         {
@@ -4800,14 +4800,14 @@
           "name": "stdout",
           "text": [
             "\n",
-            "Epoch: 1 | Train Loss: 0.071 | Test Loss: 0.049\n"
+            "Epoch: 1 | Train Loss: 0.078 | Test Loss: 0.043\n"
           ]
         },
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "\r 60%|██████    | 3/5 [00:43<00:27, 13.63s/it]"
+            "\r 30%|███       | 3/10 [00:40<01:28, 12.69s/it]"
           ]
         },
         {
@@ -4815,14 +4815,14 @@
           "name": "stdout",
           "text": [
             "\n",
-            "Epoch: 2 | Train Loss: 0.056 | Test Loss: 0.047\n"
+            "Epoch: 2 | Train Loss: 0.061 | Test Loss: 0.071\n"
           ]
         },
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "\r 80%|████████  | 4/5 [00:54<00:12, 12.50s/it]"
+            "\r 40%|████      | 4/10 [00:51<01:11, 11.93s/it]"
           ]
         },
         {
@@ -4830,14 +4830,14 @@
           "name": "stdout",
           "text": [
             "\n",
-            "Epoch: 3 | Train Loss: 0.049 | Test Loss: 0.041\n"
+            "Epoch: 3 | Train Loss: 0.050 | Test Loss: 0.041\n"
           ]
         },
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 5/5 [01:04<00:00, 12.97s/it]"
+            "\r 50%|█████     | 5/10 [01:01<00:57, 11.51s/it]"
           ]
         },
         {
@@ -4845,16 +4845,22 @@
           "name": "stdout",
           "text": [
             "\n",
-            "Epoch: 4 | Train Loss: 0.043 | Test Loss: 0.048\n",
-            "CPU times: user 57.6 s, sys: 557 ms, total: 58.1 s\n",
-            "Wall time: 1min 4s\n"
+            "Epoch: 4 | Train Loss: 0.044 | Test Loss: 0.036\n"
           ]
         },
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "\n"
+            "\r 60%|██████    | 6/10 [01:13<00:46, 11.66s/it]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "Epoch: 5 | Train Loss: 0.040 | Test Loss: 0.031\n"
           ]
         }
       ]
@@ -4920,7 +4926,8 @@
         "test_labels = []\n",
         "\n",
         "for sample,label in random.sample(list(mnist_test), k=5):\n",
-        ""
+        "  test_samples.append(sample)\n",
+        "  test_labels.append(label)"
       ],
       "metadata": {
         "id": "bluz6BTS39VS"
@@ -4930,7 +4937,10 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "print(test_samples[0])\n",
+        "print(test_labels[0])"
+      ],
       "metadata": {
         "id": "vLnt0pLxXH9M"
       },
