--- a/Computer_Vision.ipynb
+++ b/Computer_Vision.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "gpuType": "T4",
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOq+2LGpa+aNOGkvPvkjx4b",
+      "authorship_tag": "ABX9TyMytHA36yjHxPFHNe1c4VWc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3718,7 +3718,7 @@
         "    # Get the predicted label\n",
         "    pred_label = class_names[pred_classes[i]]\n",
         "\n",
-        "    # Get the truth label\n",
+        "    # Get the true label\n",
         "    truth_label = class_names[test_labels[i]]\n",
         "\n",
         "    # Put proper title\n",
@@ -5021,7 +5021,12 @@
       "cell_type": "code",
       "source": [
         "# Visualizing and comparing with the true labels\n",
-        "\n"
+        "\n",
+        "plt.figure(figsize=(9,9))\n",
+        "\n",
+        "for i,sample in enumerate(test_samples):\n",
+        "\n",
+        "  plt.suplot(6,3,i+1)"
       ],
       "metadata": {
         "id": "vLnt0pLxXH9M"
